--- a/package.json
+++ b/package.json
@@ -8,18 +8,9 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "babel-core": "^6.17.0",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.3.13",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.1"
   },
   "scripts": {
-    "dev": "webpack-dev-server --content-base ./ --inline --hot",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build-dev": "webpack",
-    "build-prod": "webpack --compress",
-    "compile-prod": "webpack --optimize-minimize --define process.env.NODE_ENV='production'"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jakub Filinger",
   "homepage": "https://github.com/kubafilinger/auctionNipCollector#readme"
