--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "webpack.config.js",
   "dependencies": {
     "axios": "^0.18.0",
+    "mysql": "^2.15.0",
     "underscore": "^1.8.3"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
