--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "mysql": "^2.15.0",
+    "mysql2": "^1.5.2",
+    "sequelize": "^4.36.1",
     "underscore": "^1.8.3"
   },
   "devDependencies": {},
